Improve clip command and random clip command